# black_hole

./: .gitignore  2D_lensing.cpp  CMakeLists.txt  CPU-geodesic.cpp  README.md  automake.sh  black_hole.cpp  blackhole_struct.cpp  blackhole_struct.hpp  blackholesim.cpp  blackholesim.hpp  blakcholesim.cpp  compute_photons.comp  engine.cpp  engine.hpp  fs.frag  geodesic.comp  gpu_points.frag  gpu_points.vert  imgui.ini  kerr_blackhole.cpp  kerr_inline.hpp  kerrintegrate.cpp  kerrintegrate.hpp  kerrstate.cpp  kerrstate.hpp  main.cpp  panel.hpp  photon.frag  photon.vert  ray_tracing.cpp  utils.cpp  utils.hpp  vcpkg.json  vs.vert
.cache/clangd/index/: 2D_lensing.cpp.FD7067636B962631.idx  black_hole.cpp.04B1576A9ED814B2.idx  blackholesim.cpp.97DDC1054FAD6908.idx  blackholesim.hpp.BFB94E5B3E4641C1.idx  engine.cpp.E3A6A3C9440CEE18.idx  engine.hpp.63225781A6077CAC.idx  glad.c.71471E97C2C20E69.idx  glad.h.8AD73647E789F972.idx  imconfig.h.3FD8524AD3E20B2F.idx  imgui.cpp.FAE8416B3C1C6E13.idx  imgui.h.1B310768259ABC7A.idx  imgui_demo.cpp.C0BF0AD085FE384F.idx  imgui_draw.cpp.0CEC135E828671BC.idx  imgui_impl_glfw.cpp.7E0A76AE81BB913E.idx  imgui_impl_glfw.h.321A3622DE040BEA.idx  imgui_impl_opengl3.cpp.93287D5D62CD7286.idx  imgui_impl_opengl3.h.9FA8B18BCBD1E9A4.idx  imgui_impl_opengl3_loader.h.EE29FDFBC0745497.idx  imgui_internal.h.6883BC4FB0917D30.idx  imgui_tables.cpp.B983113CE685E766.idx  imgui_widgets.cpp.285A531C5FD02740.idx  imstb_rectpack.h.68453D59A0E24065.idx  imstb_textedit.h.EF5B2F48E6763035.idx  imstb_truetype.h.F4595AD4471C3142.idx  kerr_blackhole.cpp.60569FAC437FDF9A.idx  kerr_inline.hpp.AFF643794E83347B.idx  kerrintegrate.cpp.D00B988C670EBA34.idx  kerrintegrate.hpp.1D4486AFEB89B1FD.idx  khrplatform.h.DC43FF2155D41B5C.idx  main.cpp.943AF758D1893D4C.idx  panel.hpp.B0B1529C1C3CC406.idx
